fix currencies changes on mobile view

--- a/src/app/modules/account/dashboard/dashboard.scss
+++ b/src/app/modules/account/dashboard/dashboard.scss
@@ -112,6 +112,7 @@
 
 .main-info__head-item--dashboard {
   padding: 0;
+  overflow-x: scroll;
 }
 
 
