--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -439,7 +439,7 @@ p {
 
 .head-item__container {
   width: 100%;
-
+  min-width: 500px;
   overflow: hidden;
 
   display: flex;
